# AI-agent

./: .gitignore  .modelfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: AGENT_SETUP.md  config.py  logger.py  main.py
backend/agents/: coder_agent.py  openhands_agent.py  planner_agent.py  researcher_agent.py
backend/api/: agent_routes.py
backend/core/: orchestrator.py  setting.py
backend/mcp/: client.py
backend/memory/: store.py
backend/memory/sessions/: cici-0wvxzhd0.json  cici-3v5e9voe.json  cici-9iz6xhke.json  cici-bf82km4o.json  cici-f691bz10.json  cici-gueyvdia.json  cici-i6rjx7gb.json  cici-idtq590g.json  cici-ipp9ukd6.json  cici-l0tj3jvv.json  cici-nwgtug40.json  cici-rosq9ppf.json  cici-tqgaed91.json  cici-tx567h4g.json  cici-vw204nqz.json  cici-ws7bti45.json  cici-xcsf6l4o.json
backend/prompts/: system_prompts.py
backend/services/: ollama.py  ollama_service.py
backend/tools/: code_tool.py  openhands_tool.py  web_tool.py
backend/workflows/: daily_briefing.py  runner.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/lib/: api.js
mcp/: client.py
